Updates A fix for the panelbar power manager plugin icon. The icon should now be completely visible.

--- a/Theme/Chicago95/gtk-3.24/apps/xfce.css
+++ b/Theme/Chicago95/gtk-3.24/apps/xfce.css
@@ -47,6 +47,8 @@ XfdesktopIconView.view {
     box-shadow: none;
     color: @panel_fg_color_bright;
     background-color: @selected_bg_color; }
+  #xfce4-power-manager-plugin {
+    margin-bottom: -2px; }
 
 #clock-button {
   border: 2px solid transparent;
